Update project24-build_eks_terraform.md